--- a/paper/diagonalsPermutahedra.tex
+++ b/paper/diagonalsPermutahedra.tex
@@ -3406,78 +3406,28 @@ This proves that $R_{M'_{j}}$ is block-admissible, completing the inductive proo
 
 Our next goal is to prove the equivalence between the $m$-shift and geometric $\SU$ diagonals (\cref{prop:iso-shift-IJ-diagonals}).
 As a tool for this proof, we now study \emph{inversions}, or crossings in the partition trees of the geometric $\SU$ diagonal.
-In addition, we shall see later (\cref{sec:Shift-lattice}) that these inversions define a lattice structure on the set of facets. 
+In addition, we shall see later (\cref{sec:Shift-lattice}) that these inversions define a lattice structure on the set of facets.
 
 \begin{definition}
-Let $i,j$ be elements of $[n]$, such that $i<j$.
-We define $(i,j)$ to be an \defn{inversion of an ordered partition} $\sigma$ if $\sigma^{-1}(j)\leq\sigma^{-1}(i)$ (\ie $j$ is either before $i$, or in the same block).
-We define $(i,j)$ to be an \defn{inversion of a pair of ordered partitions} $(\sigma,\tau)$, if $(i,j)$ is an inversion of $\tau$, and $(i,j)$ is not an inversion of $\sigma$.
+Let $\sigma$ be an ordered partition.
+\begin{itemize}
+    \item The \defn{strict inversions} of an ordered partition are $I_{<}(\sigma):= \{(i,j): i<j \land \sigma^{-1}(j)<\sigma^{-1}(i) \}$.
+    \item The \defn{weak inversions} of an ordered partition are $I_{\leq}(\sigma):= \{(i,j): i<j \land \sigma^{-1}(j)\leq \sigma^{-1}(i) \}$.
+\end{itemize}
+We then define the \defn{inversions of an ordered partition pair} $I((\sigma,\tau)):=I_{<}(\tau)\ssm I_{\leq}(\sigma)$. 
 \end{definition}
-
-\begin{remark}
-\Guillaume{TBC, reference in intro (+ abstract?)}
-We can define a partial order on ordered partitions by saying $\sigma\leq\tau$ if the inversion set of $\sigma$ is a subset of the inversion set of $\tau$.
-This partial order refines into the weak facial order of the permutahedra, introduced in \cite{palacios2004weak}, and shown to be a lattice in \cite{dermenjian2018facial}.
-Later in \cref{sec:Shift-lattice}, we will show that every SCP and all its admissible sequences of left and right shifts is a sub-lattice of either partial order.
-For now, we illustrate the weak facial order for $\mathsf{Perm}(3)$ as a refinement of the defined inversion order, grouping elements with the same inversion sets.
-\begin{center}
-\begin{tikzpicture}
-\node (1) at (-1.5, -1) {$3|12$};
-\node (2) at (-2.5, -2) {$3|1|2$};
-\node (3) at (-2.5, -3) {$13|2$};
-\node (4) at (-2.5, -4) {$1|3|2$};
-\node (5) at (-1.5, -5) {$1|23$};
-%
-\node (6) at (1.5, -1) {$23|1$};
-\node (7) at (2.5, -2) {$2|3|1$};
-\node (8) at (2.5, -3) {$2|13$};
-\node (9) at (2.5, -4) {$2|1|3$};
-\node (10) at (1.5, -5) {$12|3$};
-%
-\node (11) at (0, 0) {$3|2|1$};
-\node (12) at (0, -3) {$123$};
-\node (13) at (0, -6) {$1|2|3$};
-%
-\draw[thick] (1) -- (2); 
-\draw[thick] (2) -- (3); 
-\draw[thick] (3) -- (4); 
-\draw[thick] (4) -- (5);
-%
-\draw[thick] (6) -- (7); 
-\draw[thick] (7) -- (8); 
-\draw[thick] (8) -- (9); 
-\draw[thick] (9) -- (10);
-%
-\draw[thick] (1) -- (11);
-\draw[thick] (6) -- (11);
-%
-\draw[thick] (1) -- (12);
-\draw[thick] (5) -- (12);
-\draw[thick] (6) -- (12);
-\draw[thick] (10) -- (12);
-%
-\draw[thick] (5) -- (13);
-\draw[thick] (10) -- (13);
-%
-\hedge[green, very thick]{1,11,6,12}{0.45cm}
-\hedge[green, very thick]{2,3}{0.45cm}
-\hedge[green, very thick]{4,5}{0.45cm}
-\hedge[green, very thick]{7,8}{0.45cm}
-\hedge[green, very thick]{9,10}{0.45cm}
-\end{tikzpicture}
-\end{center}
-
-\end{remark}
+In words, the inversions of an ordered partition pair are those $i<j$ pairs in which $j$ comes in an earlier block than $i$ in $\tau$, and $i$ comes in an earlier block than $j$ in $\sigma$.
+We note that, the strict and weak inversions of a permutation both correspond to the classical definition of inversions of a permutation.
 
 \begin{proposition}
 \label{p:crossings}
 The set of inversions of a facet of the geometric $\SU$ diagonal is in bijection with its set of edge crossings. 
-Moreover, under this bijection, $\SCP$s correspond to facets with no crossings.
+Moreover, under this bijection, strong complementary pairs correspond to facets with no crossings.
 \end{proposition}
 
 \begin{proof}
-For the first part of the statement, it is clear that every inversion gives rise to a crossing. 
-For the converse, one needs to check that an anti-inversion, where $y$ appears before $x$ in $\sigma$ and $x$ appears before $y$ in $\tau$, cannot occur in a facet of the geometric $\SUD$; this follows immediately from the $(I,J)$-conditions for $\card{I} = \card{J} = 1$ (\cref{thm:minimal}). 
+For the first part of the statement, the only way for such a crossing to be produced, is for $(i,j) \in I((\sigma,\tau))$, or for $j$ to appear before $i$ in $\sigma$ and $i$ before $j$ in $\tau$.
+However, the later cannot occur in a facet of the geometric $\SUD$; this follows immediately from the $(I,J)$-conditions for $\card{I} = \card{J} = 1$. 
 The second part of the statement follows from the fact that facets of the diagonal $\SUD$ with no crossings are in bijection with permutations.
 By definition (\cref{def:strong-complementary-pairs}), from a partition one obtains a $\SCP$, which is in the geometric $\SUD$ (\cref{lem:SCP-path-desc}). 
 In the other way around, given a $\SCP$, one can read-off the partition in the associated tree, which has no crossings, by a vertical down-slice of edges (\cref{ex:strong-complementary}).
@@ -4130,6 +4080,116 @@ where we have aligned each element, of each diagonal, vertically with its dual e
 
 %%%%%%%%%%%%%%%
 
+\subsection{The Weak Facial Order}\label{sec:Weah Facial Order}
+
+The weak facial order of the the permutahedra, introduced in \cite{palacios2004weak}, generalizes the weak order on permutations to all ordered partitions.
+In this section we recall a definition of the weak facial order, and characterize facets of both the $\LA$ and $\SU$ diagonal as intervals in this order.
+
+\begin{definition}[Lemma 22 of \cite{palacios2004weak}]
+Let $\sigma = \sigma_1|...|\sigma_k$ denote an ordered partition.
+Then the weak facial order lattice of the permutahedra is the transitive closure of the following relations,
+\begin{align}
+    \max \sigma_i < \min \sigma_{i+1} &\implies \sigma < \sigma_1|...|\sigma_i \sqcup \sigma_{i+1}|...|\sigma_k  \label{eq:Weak Facial 1}\\
+    \min \sigma_i > \max \sigma_{i+1} &\implies \sigma > \sigma_1|...|\sigma_i \sqcup \sigma_{i+1}|...|\sigma_k \label{eq:Weak Facial 2}
+\end{align}
+\end{definition}
+
+\begin{definition}
+We define a partial order on the set of ordered partitions through weak inversions.
+We say $\sigma<\tau$ if $I_{\leq}(\sigma)<I_{\leq}(\tau)$. 
+\end{definition}
+
+\begin{proposition}
+The weak facial order is a refinement\Kurt{check correct term} of the inversion order.
+\end{proposition}
+\begin{proof}
+This is clear as the inversion table used by the weak facial order (Example 3.6 of \cite{dermenjian2018facial}) is a refinement of our notion of an inversion.
+In particular, their notion of an inversion distinguishes when two elements are in the same block.
+\end{proof}
+
+
+\begin{example}
+We illustrate the weak facial order for $\Perm[3]$ as a refinement of the weak inversion order, grouping elements with the same weak inversion sets.
+\begin{center}
+\begin{tikzpicture}
+\node (1) at (-1.5, -1) {$3|12$};
+\node (2) at (-2.5, -2) {$3|1|2$};
+\node (3) at (-2.5, -3) {$13|2$};
+\node (4) at (-2.5, -4) {$1|3|2$};
+\node (5) at (-1.5, -5) {$1|23$};
+%
+\node (6) at (1.5, -1) {$23|1$};
+\node (7) at (2.5, -2) {$2|3|1$};
+\node (8) at (2.5, -3) {$2|13$};
+\node (9) at (2.5, -4) {$2|1|3$};
+\node (10) at (1.5, -5) {$12|3$};
+%
+\node (11) at (0, 0) {$3|2|1$};
+\node (12) at (0, -3) {$123$};
+\node (13) at (0, -6) {$1|2|3$};
+%
+\draw[thick] (1) -- (2); 
+\draw[thick] (2) -- (3); 
+\draw[thick] (3) -- (4); 
+\draw[thick] (4) -- (5);
+%
+\draw[thick] (6) -- (7); 
+\draw[thick] (7) -- (8); 
+\draw[thick] (8) -- (9); 
+\draw[thick] (9) -- (10);
+%
+\draw[thick] (1) -- (11);
+\draw[thick] (6) -- (11);
+%
+\draw[thick] (1) -- (12);
+\draw[thick] (5) -- (12);
+\draw[thick] (6) -- (12);
+\draw[thick] (10) -- (12);
+%
+\draw[thick] (5) -- (13);
+\draw[thick] (10) -- (13);
+%
+\hedge[green, very thick]{1,11,6,12}{0.45cm}
+\hedge[green, very thick]{2,3}{0.45cm}
+\hedge[green, very thick]{4,5}{0.45cm}
+\hedge[green, very thick]{7,8}{0.45cm}
+\hedge[green, very thick]{9,10}{0.45cm}
+\end{tikzpicture}
+\end{center}
+\end{example}
+
+
+
+
+\begin{lemma}\label{lem:SCPs are intervals of weak facial order}
+Let $(\sigma,\tau)$ be the SCP corresponding to the permutation $v$, then $\sigma<v<\tau$ under the weak facial order.
+\end{lemma}
+\begin{proof}
+Firstly $\sigma<v$, as repeated applications of \cref{eq:Weak Facial 2} shows that a block of elements is smaller than those same elements arranged in decreasing order.
+Similarly $v<\tau$, as repeated applications of \cref{eq:Weak Facial 1} shows that a sequence of increasing elements is smaller than those same elements in a block. 
+To ground this in \cref{ex:shift translation by theta}, $13|247|5|6 < 3|1|7|4|2|5|6 <3|17|4|256$.
+\end{proof}
+
+More generally,
+\begin{proposition}
+Facets $(\sigma,\tau)$ of the $\LA$ and $\SU$ diagonal correspond to intervals $[\sigma,\tau]$ of the weak facial order.
+\end{proposition}
+\begin{proof}\
+We proceed by induction.
+Let $(\sigma,\tau) \in \SUD$ be a facet generated by shifts of the SCP corresponding to the permutation $v$, and suppose that $\sigma < v < \tau$.
+Given \cref{lem:SCPs are intervals of weak facial order}, we have a base case for induction.
+We then prove that if $R_\rho \tau$ is an admissible right shift of $\rho$, then $\sigma < v < R_\rho \tau$.
+As the analogous results for left shifts and $\LA$ shifts proceed similarly, this yields the result.
+
+Let $v'$ be the permutation resulting from writing out the blocks of $R_\rho \tau$ in increasing order, then $v<v'<R_\rho \tau$.
+The second equality follows as in the prior proof.
+To prove the first equality, we show that $I_<(v)\subset I_<(v')$ (as the the weak facial order on permutations is the weak order).
+This follows as \Kurt{Clear, but think of something concise.}
+\end{proof}
+
+So given this result and \cref{thm:patterns} (which shows that vertices are intervals in the weak order, and hence the weak facial order), it is suspected that all faces of the $\LA$ and $\SU$ diagonals are intervals of the weak facial order. 
+\Kurt{Do we care enough to look? Any quick ideas?}
+
 \subsection{Shift lattice structure}
 \label{sec:Shift-lattice}
 
@@ -4224,45 +4284,62 @@ For instance, in the case of meets,
 The Hasse diagram of the lattice corresponds to singleton $1$-shifts, and we can step backwards in the diagram by applying their inverse (\cref{rem:inverses}).
 For a clear example of the Hasse diagram, we direct the reader back to \cref{ex:shift translation by theta}.
 
-\begin{definition}[Lemma 22 of \cite{palacios2004weak}]
-Let $\sigma = \sigma_1|...|\sigma_k$ denote an ordered partition.
-Then the weak facial order lattice of the permutahedra is the transitive closure of the following relations,
-\begin{enumerate}
-    \item $\max \sigma_i < \min \sigma_{i+1} \implies \sigma < \sigma_1|...|\sigma_i \sqcup \sigma_{i+1}|...|\sigma_k$
-    \item $\min \sigma_i > \max \sigma_{i+1} \implies \sigma > \sigma_1|...|\sigma_i \sqcup \sigma_{i+1}|...|\sigma_k$
-\end{enumerate}
-\end{definition}
+Given that in \cite{dermenjian2018facial} it was shown that the weak facial order is a lattice, it is natural to wonder if the identified lattice structure arises as a sub-lattice of the weak facial order.
 
 \begin{proposition}
-The Weak facial order is a refinement of the inversion order.
+The shift lattices are not sub-lattices of the weak facial order.
 \end{proposition}
-\begin{proof}
-This is clear as the inversion table used by the weak facial order (Example 3.6 of \cite{dermenjian2018facial}) is a refinement of our notion of an inversion.
-In particular, their notion of an inversion distinguishes when two elements are in the same block.
-\end{proof}
 
-
-\begin{lemma}
-Shifts of either diagonal respect the weak facial order.
-\end{lemma}
-\Kurt{Doing something silly here, might be false...}
 \begin{proof}
-If $R_\rho$ is a well-defined $1$ shift of $(\sigma,\tau) \in \LAD$, then
-\begin{align*}
-    \tau_1|...|\tau_k &< \tau_1|...|\tau_i\setminus \rho| \rho|\tau_{i+1}|...|\tau_k &(2) \\
-    &< \tau_1|...|\tau_i\setminus \rho|\tau_{i+1}|...|\tau_k &(1) 
-\end{align*}
-where $(2)$ applies as $\rho < \min \tau_{i,i+1}\leq \min \tau_i\setminus \rho$, and $(1)$ applies as $\rho< \min \tau_{i,i+1} \leq \min \tau_{i+1}$.\Kurt{Both false what is a counter example?}
-i.e. we know that $\tau < R_\rho(\tau)$ by stepping through the facet of $P_n$ between these two faces.
-We can similarly show that for a well-defined $\LA$ left shift that $L\sigma < \sigma$.
-The proof for the $\SU$ diagonal for once proceeds differently.
-f $R\rho$ is a well-defined $1$ shift of $(\sigma,\tau) \in \SU$, then 
-\begin{align*}
-        \sigma_1|...|\sigma_k &< \sigma_1|...|\sigma_{i-1} \sqcup \sigma_{i}|...|\sigma_k &(1) \\
-        &< \sigma_1|...|\sigma_{i-1}\sqcup \rho| \sigma_{i}\setminus \rho|...|\sigma_k &(2)
-\end{align*}
-where $(1)$ applies as $\rho \leq \max \sigma_{i-1}$...
+We provide a counter example for the $\LA$ diagonal that illustrates the identified lattice structure is not compatible with the weak facial order.
+Similar counter examples can be produced for the $\SU$ diagonal.
+Consider the sequence of path admissible $\LA$ right $1$-shifts.
+\begin{center}
+\begin{tikzpicture}[scale=.6]  
+\node[anchor=east] (1) at (-1.5, -1) {$1$};
+\node[anchor=east] (2) at (-1.5, -2) {$2$};
+\node[anchor=east] (3) at (-1.5, -3) {$34$};
+%
+\node[anchor=west](4) at (1.5, -1) {$124$};
+\node[anchor=west](5) at (1.5, -2) {$3$};
+%
+\draw[thick] (1.east) -- (4.west); 
+\draw[thick] (2.east) -- (4.west);
+\draw[thick] (3.east) -- (4.west);
+\draw[thick] (3.east) -- (5.west);
+\end{tikzpicture}
+\raisebox{2.15em}{$\xrightarrow{R_{2}}$}
+\begin{tikzpicture}[scale=.6]  
+\node[anchor=east] (1) at (-1.5, -1) {$1$};
+\node[anchor=east] (2) at (-1.5, -2) {$2$};
+\node[anchor=east] (3) at (-1.5, -3) {$34$};
+%
+\node[anchor=west](4) at (1.5, -1) {$14$};
+\node[anchor=west](5) at (1.5, -2) {$23$};
+%
+\draw[thick] (1.east) -- (4.west); 
+\draw[thick] (2.east) -- (5.west);
+\draw[thick] (3.east) -- (4.west);
+\draw[thick] (3.east) -- (5.west);
+\end{tikzpicture}
+\raisebox{2.15em}{$\xrightarrow{R_{1}}$}
+\begin{tikzpicture}[scale=.6]  
+\node[anchor=east] (1) at (-1.5, -1) {$1$};
+\node[anchor=east] (2) at (-1.5, -2) {$2$};
+\node[anchor=east] (3) at (-1.5, -3) {$34$};
+%
+\node[anchor=west](4) at (1.5, -1) {$4$};
+\node[anchor=west](5) at (1.5, -2) {$123$};
+%
+\draw[thick] (1.east) -- (5.west); 
+\draw[thick] (2.east) -- (5.west);
+\draw[thick] (3.east) -- (4.west);
+\draw[thick] (3.east) -- (5.west);
+\end{tikzpicture}
+\end{center}
+The final right shift does not respect the weak facial order as $14|23$ and $4|123$ are incomparable.
 \end{proof}
+We note that as the weak inversion order respects shifts (e.g. $14|23 < 4|123$), it is the additional information in the refinement of the weak facial order, over the weak inversion order (\cref{sec:Weah Facial Order}), that is breaking the lattice structure.
 
 \begin{remark}
 As a consequence of \cref{prop:shift lattice}, the facets of the operadic diagonal are a disjoint union of lattices.
