Weak facial order sources

--- a/paper/diagonalsPermutahedra.bib
+++ b/paper/diagonalsPermutahedra.bib
@@ -498,3 +498,20 @@
 	YEAR = {2002},
 	PAGES = {x+349},
 }
+
+@article{palacios2004weak,
+  title={Weak Bruhat order on the set of faces of the permutahedra},
+  author={Palacios, Patricia and Ronco, Maria},
+  journal={arXiv preprint math/0404352},
+  year={2004}
+}
+
+@article{dermenjian2018facial,
+  title={The facial weak order and its lattice quotients},
+  author={Dermenjian, Aram and Hohlweg, Christophe and Pilaud, Vincent},
+  journal={Transactions of the American Mathematical Society},
+  volume={370},
+  number={2},
+  pages={1469--1507},
+  year={2018}
+}
